--- a/html/events/07-事件命名空间的面试题.html
+++ b/html/events/07-事件命名空间的面试题.html
@@ -52,11 +52,11 @@
             });
 
             /*
-             *  利用trigger触发子元素带命名空间的事件，
-             *  那么父元素带相同命名空间的事件也会被触发，
-             *  而父元素没有命名空间的事件不会被触发
+             1. 利用 trigger 触发子元素带命名空间的事件，那么父元素带相同命名空间的事件也会被触发，而父元素没有命名空间的事件不会被触发
+             2. 利用 trigger 触发子元素不带命名空间的事件，那么子元素所有相同类型的事件和父元素所有相同类型的事件都会被触发 
              */
-            $(".son").trigger("click.ls");
+            // $(".son").trigger("click.ls");
+            $(".son").trigger("click");
         })
     </script>
 </body>
