--- a/html/animation/02-对联广告.html
+++ b/html/animation/02-对联广告.html
@@ -135,7 +135,9 @@
             // 1.监听网页的滚动
             $(window).scroll(function () {
                 // 1.1 获取网页滚动的偏移位
-                var offset = $('html,body').scrollTop();
+                // 对 body 监测不到偏移量
+                // $('html,body').scrollTop()    
+                var offset = $('html').scrollTop();
                 console.log(offset);
                 //   1.2 判断网页是否滚动了指定位置
                 if (offset >= 500) {
