--- a/html/DOM-Node/01-添加节点.html
+++ b/html/DOM-Node/01-添加节点.html
@@ -16,23 +16,40 @@
         <li>我是第2个li</li>
         <li>我是第3个li</li>
     </ul>
+    <div>我是div</div>
     <script>
         $(function () {
             /*
             内部插入
-            append(content|fn)
-            appendTo(content)
-            会将元素添加到指定元素内部的最后
-            prepend(content}fn)
-            会将元素添加到指定元素内部的最前面
+                append(content|fn)
+                appendTo(content)
+                会将元素添加到指定元素内部的最后
+
+                prepend(content}fn)
+                会将元素添加到指定元素内部的最前面
+
+
+            外部插入
+                after(content|fn)
+                会将元素添加到指定元素外部的后面
+                before(content|fn)
+                会将元素添加到指定元素外部的前面
+                insertAfter(content)
+                insertBefore(content)
             */
             $("button").click(function () {
                 // 创建一个节点
                 var $li = $("<li>新增li</li>");
                 // 添加一个节点
                 // $("ul").append($li);
-                $("ul").prepend($li);
                 // $li.appendTo("ul");
+                // $("ul").prepend($li);
+                // $li.prependTo("ul");
+
+                /* $("ul").after($li);
+                $("ul").before($li); */
+                // $li.insertAfter("ul");
+                $li.insertBefore("ul");
             })
         })
     </script>
